# Digital_Hub

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: production.yml
core/: .langchain_cache.db  db.sqlite3  milvus-standalone-docker-compose.yml  project_uwsgi.ini  project_uwsgi.ini.save  project_uwsgi.ini.save.1  test.py  uwsgi.ini
core/.github/: production.yml
core/AI/: admin.py  ai_instance.py  classifier.py  consumers.py  doc_init_ai.py  intent_classifier.py  intents.py  models.py  providers.py  routing.py  rules.py  signals.py  tasks.py  urls.py  utils.py  vectorstore.py  views.py
core/AI/api/: api.py  serializer.py
core/AI/migrations/: 0001_initial.py  0002_alter_document_file.py  0003_chatinstance_is_deleted.py
core/AI/tasks/: task.py
core/AI/templates/chat/: room.html
core/Notification/: admin.py  models.py  urls.py
core/Notification/api/: serializers.py  urls.py  views.py
core/Notification/push_notification/: admas-9e2c7-9bcdd20b9461.json  firebase_connect.py
core/Notification/tasks/: push_notification_task.py
core/Post/: admin.py  models.py
core/Post/migrations/: 0001_initial.py
core/Videos/: admin.py  models.py  urls.py
core/Videos/api/: api.py  serializer.py
core/Videos/migrations/: 0001_initial.py  0002_remove_videocommentlike_like_videocomment_like.py  0003_rename_reply_videocomment_replay.py  0004_alter_videolike_video.py  0005_alter_videocommentlike_comment.py  0006_video_thumbnail.py
core/chroma_db/: chroma.sqlite3
core/conf/volumes/minio/.minio.sys/: format.json
core/mobile/: admin.py  models.py  urls.py  validators.py  views.py
core/mobile/api/: api.py  dpmes_api.py  serializer.py  time_series_api.py
core/mobile/migrations/: 0001_initial.py  0002_alter_apps_icon.py  0003_rename_apps_app.py  0004_alter_app_icon.py  0005_contactus_faq_setting.py  0006_app_route.py
core/project/: asgi.py  celery.py  settings.py  urls.py
core/socket/: main.html  ws_server.py
core/templates/: privacy_policy.html
core/userManagement/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
core/userManagement/api/: api.py  serializer.py
core/userManagement/migrations/: 0001_initial.py  0002_alter_customuser_excellence.py
core/userManagement/services/: email.py
core/userManagement/tasks/: email_tasks.py
google-env/: service-account.json
milvus-gpu-setup/: docker-compose.yml
milvus-gpu-setup/volumes/minio/.minio.sys/: format.json
milvus-gpu-setup/volumes/minio/.minio.sys/tmp/.trash/2796d58f-fbbf-429f-88a8-7fff4bd25693/: xl.meta.bkp
milvus-gpu-setup/volumes/minio/.minio.sys/tmp/.trash/7ea93834-fa5a-4c3d-ad3f-ff43a70818be/: xl.meta.bkp
milvus-gpu-setup/volumes/minio/.minio.sys/tmp/.trash/98942fd7-a86c-4369-9b35-b6cb0e86b04d/: xl.meta.bkp
milvus-gpu-setup/volumes/minio/.minio.sys/tmp/.trash/cf551802-abd4-4d88-9196-336bb5f60bbc/: xl.meta.bkp
milvus-gpu-setup/volumes/minio/.minio.sys/tmp/.trash/d4118590-b98e-4a5a-8a95-dbf371aa3d58/: xl.meta.bkp
milvus-gpu-setup/volumes/minio/.minio.sys/tmp/.trash/ecb00035-fffe-4341-915c-d163bee907b8/: xl.meta.bkp
(+11 files in other folders)
