[project]
name = "digital-hub"
version = "0.1.0"
description = ""
authors = [
    {name = "Mikiyas Degefu",email = "mikiyas.m.degefu@gmail.com"},
    {name = "Kaleab Hegie",email = "benjiyg400@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "django (==4.2.6)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "djangorestframework-simplejwt (>=5.4.0,<6.0.0)",
    "langchain (>=0.3.18,<0.4.0)",
    "langchain-ollama (>=0.2.3,<0.3.0)",
    "langchain-chroma (>=0.2.2,<0.3.0)",
    "langchain-community (>=0.3.17,<0.4.0)",
    "pymupdf (>=1.25.3,<2.0.0)",
    "rest-framework-simplejwt (>=0.0.2,<0.0.3)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "django-ckeditor (>=6.7.2,<7.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "firebase-admin (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
